--- a/src/main/resources/templates/thymeleaf/common/includes/mypage_menu.html
+++ b/src/main/resources/templates/thymeleaf/common/includes/mypage_menu.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" href="/mh/css/menu/menu.css">
+<link rel="stylesheet" href="/mh/css/common/menu/menu.css">
 </head>
 <body>
 	<div class="sidebar" th:fragment="menu">
